--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task-text {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -117,7 +117,7 @@
   width: 226px;
 }
 .task-item >    .task-input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .task-button.delete .button-image {
   height: 2em;
@@ -130,18 +130,18 @@
 
 /* Completed */
 .task-list#completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list .task-item .task-input[type=text] {
-  display: none
+  display: none;
 }
 
 .task-list .task-item.edit-mode .task-input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-list .task-item.edit-mode .task-label {
