--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@
   margin: 0;
   padding: 0px;
 }
-.task-item, .section-title {
+.task-item,
+.section-title {
   list-style: none;
 }
-.task-input,.task-button{
+.task-input,
+.task-button {
   outline: none;
 }
 .task-button {
@@ -59,7 +61,7 @@
 }
 /* Heading */
 .section-title,
-.task-label[for="new-task"] {
+.task-label.new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +87,7 @@
 }
 
 /* New Task */
-.task-label[for="new-task"] {
+.task-label.new-task {
   display: block;
   margin: 0 0 20px;
 }
